[package]
name = "gmt-ns-im"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [ "atmosphere","calibrations/sh24", "scopes", "m1-modes", "web_server"]

[workspace.dependencies]
anyhow = "1.0.96"
matio-rs = "1.3.3"
gmt_dos-actors = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "11.2.0" }
gmt_dos-clients = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "5.0.0", features = ["gif", "nalgebra"] }
gmt_dos-clients_io = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "4.2.2" }
gmt_dos-clients_arrow = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "2.1.1" }
gmt_dos-clients_crseo = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "4.3.0"  }
gmt_dos-systems_agws = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "0.1.0" }
gmt_dos-clients_scope-client= { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "0.2.2"}
serde-pickle = "1.2.0"
skyangle = "0.3.1"
tokio = { version = "1.43.0", features = ["full"] }

[dependencies]
chrono = "=0.4.34"
gmt-fem = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "5.1.1" }
gmt_dos-actors.workspace = true 
interface = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "1.3.2" , package="gmt_dos-actors-clients_interface" }
gmt_dos-clients.workspace = true
gmt_dos-clients_crseo.workspace = true
gmt_dos-clients_io.workspace = true 
gmt_dos-clients_arrow.workspace = true 
gmt_dos-clients_servos = { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "3.0.0", features = ["cuda"] }
gmt_dos-clients_scope= { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "3.1.0", features = ["server"], optional = true}
gmt_dos-clients_scope-client= { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "0.2.2", optional = true}
gmt_dos-systems_agws.workspace = true
tokio.workspace = true
env_logger = "0.11.6"
serde-pickle.workspace = true
gmt_dos-clients_windloads= { git = "https://github.com/rconan/dos-actors.git", branch = "gmt-ns-im", version = "2.2.1" }
anyhow.workspace = true

[features]
default = ["scope"]
scope = ["gmt_dos-clients_scope", "gmt_dos-clients_scope-client"]

[patch."https://github.com/rconan/dos-actors.git"]
gmt_dos-clients_io= {path="/home/ubuntu/projects/dos-actors/clients/io"}
gmt_dos-clients_crseo= {path="/home/ubuntu/projects/dos-actors/clients/crseo"}
gmt_dos-clients_fem= {path="/home/ubuntu/projects/dos-actors/clients/fem"}
gmt_dos-clients_servos= {path="/home/ubuntu/projects/dos-actors/clients/servos"}
gmt-fem = {path="/home/ubuntu/projects/dos-actors/clients/fem/model"}
gmt_dos-systems_agws = {path="/home/ubuntu/projects/dos-actors/systems/agws"}
gmt_dos-actors= {path="/home/ubuntu/projects/dos-actors/actors"}
gmt_dos-actors-clients_interface = {path="/home/ubuntu/projects/dos-actors/interface"}
