[package]
name = "mount"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
gmt-ns-im = { version = "0.1.0", path = "../..", default-features = false }
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_arrow.workspace = true
gmt_dos-clients_crseo.workspace = true
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount.workspace = true 
gmt_dos-systems_agws.workspace = true
gmt_dos-systems_m2.workspace = true
serde-pickle.workspace = true
tokio.workspace = true
