[package]
name = "calibrations-sh48"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
geotrans = "1.1.0"
gmt-ns-im = { version = "0.1.0", path = "../..", default-features = false }
gmt_dos-clients_crseo.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-systems_agws.workspace = true
interface.workspace = true
serde-pickle.workspace = true
skyangle.workspace = true

[features]
all = ["closed_loop", "open_loop"]
open_loop = ["m1_rbm", "m2_rbm", "m1_bm"]
closed_loop = ["m1_rbm", "m2_rbm", "m1_bm"]
m1_rbm = []
m1_rxy = []
m2_rbm = []
m1_bm = []
